--- a/css/bonnietran.webflow.css
+++ b/css/bonnietran.webflow.css
@@ -1,4 +1,3 @@
-.w-embed-youtubevideo {
   width: 100%;
   position: relative;
   padding-bottom: 0px;
@@ -780,7 +779,7 @@ body {
 }
 
 .img-crop.img-wiux {
-  background-image: url('../images/cover.png');
+  background-image: url('../images/cover_1-p-500.png');
   background-position: 50% 50%;
 }
 
