--- a/css/portfolio-2022-fef9da.webflow.css
+++ b/css/portfolio-2022-fef9da.webflow.css
@@ -111,6 +111,10 @@ a {
   margin-top: 10px;
 }
 
+.detail.c {
+  text-align: right;
+}
+
 .menu {
   z-index: 100;
   align-items: center;
@@ -600,9 +604,9 @@ a {
 
 .quick-stack {
   grid-column-gap: 50px;
-  grid-row-gap: 50px;
+  grid-row-gap: 40px;
   margin-top: 80px;
-  padding-bottom: 80px;
+  padding-bottom: 20px;
   padding-left: 40px;
   padding-right: 40px;
 }
@@ -674,6 +678,14 @@ a {
 
 .body {
   background-color: #ddd;
+}
+
+.footer {
+  padding: 20px 40px 40px;
+}
+
+.text-block {
+  text-align: right;
 }
 
 @media screen and (max-width: 991px) {
@@ -752,7 +764,7 @@ a {
 }
 
 #w-node-b6a7ab0e-34b4-7f7f-8d89-6cf89498a055-52bf9902 {
-  grid-template-rows: auto auto auto auto;
+  grid-template-rows: auto auto auto auto auto;
   grid-template-columns: 1fr 1fr 1fr;
 }
 
